tests/ui/bad-version.stderr
error: expected rustc release number, like 1.31
 --> $DIR/bad-version.rs:1:22
  |
1 | #[rustversion::since(stable)]
  |                      ^^^^^^
